--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </div>
 
           <div class="hero-right">
-            <img src="images/i.png" alt="Person Standing" />
+            <img src="i.png" alt="Person Standing" />
           </div>
         </section>
       </div>
